--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,13 +1,11 @@
 name: Frontend CI/CD
 
-# Triggers on any push to main
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  build:
-    name: 🛠️ Build
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -16,31 +14,12 @@ jobs:
       - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build for production
-        run: npm run build
-
-      # Archive the dist folder as an artifact (optional)
-      - name: Upload dist artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: dist
-
-  deploy:
-    name: 🚀 Deploy to EC2
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download dist artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: dist
+      - name: Install & Build
+        run: |
+          npm ci
+          npm run build
 
       - name: Copy dist to EC2
         uses: appleboy/scp-action@v0.1.4
@@ -51,7 +30,7 @@ jobs:
           source: "dist/*"
           target: "/tmp/frontend-build/"
 
-      - name: Move files into Nginx root & reload
+      - name: Move into Nginx root & reload
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
